web/src/main/webapp/includes/styles.css
/* ... */
.breadcrumb_completed_flat { font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    color: #789EC5;
    background-image: url(../images/breadcrumb_c.gif);
    background-repeat: no-repeat;
    background-position: center left;
    padding-left: 12px;
    padding-right: 12px;
}

.subnav_Submit { background-image: url(../images/subnav_R_Submit.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #7CB98F;
}

.subnav_Extract { background-image: url(../images/subnav_R_Extract.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #AF7CE2;
}

.subnav_Manage { background-image: url(../images/subnav_R_Manage.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #D4A718;
}

.subnav_Admin { background-image: url(../images/subnav_R_Admin.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #66CCCC;
}

.subnav_TechAdmin { background-image: url(../images/subnav_R_TechAdmin.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #CC0000;
}

.subnav_inactive { background-image: url(../images/subnav_R_i.gif);
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 3px;
    background-color: #D3D3D3;
}

.title_Submit { color: #7CB98F;
}

.title_Extract { color: #AF7CE2;
}

.title_Manage { color: #D4A718;
}

.title_Admin { color: #66CCCC;
}

.title_TechAdmin { color: #CC0000;
}

.footer { background-image: url(../images/footer_BG.gif);
    background-repeat: repeat-x;
    background-position: bottom;
    vertical-align: bottom;
    padding-left: 8px;
    padding-bottom: 9px;
    line-height: 5px;
}

.sidebar { background-image: url(../images/dots.gif);
    background-repeat: repeat-x;
    background-position: top;
    width: 120px;
    padding-left: 12px;
    padding-right: 16px;
    padding-top: 8px;
    padding-bottom: 18px;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    line-height: 13px;
    color: #789EC5
}

.content { padding-left: 22px;
    padding-right: 36px;
    padding-top: 8px;
    padding-bottom: 18px;
    width: 615px;
}


.inactive { color: #CCCCCC;
}

/*table*/
/*table title*/
.table_title_Submit { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #7CB98F;
    padding-bottom: 6px;
}

.table_title_Extract { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #AF7CE2;
    padding-bottom: 6px;
}

.table_title_Manage { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #D4A718;
    padding-bottom: 6px;
}

.table_title_Admin { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #789EC5;
    padding-bottom: 6px;
}

.table_title_TechAdmin { font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    color: #CC0000;
    padding-bottom: 6px;
}
/*/table title*/

.table_border {
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 1px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    border-top-color: #CCCCCC;
    border-left-color: #CCCCCC;
    border-right-color: #CCCCCC;
    border-bottom-color: #CCCCCC;
}

.table_header_row { padding-top: 3px;
    padding-left: 2px;
    padding-right: 1px;
    padding-bottom: 3px;
    border-style: solid;
    border-top-width: 0px;
    border-left-width: 1px;
    border-right-width: 0px;
    border-bottom-width: 1px;
    border-left-color: #CCCCCC;
    border-right-color: #CCCCCC;
    border-bottom-color: #CCCCCC;
    border-top-color: #CCCCCC;
    font-weight: bold;
    color: #666666;
    vertical-align: top;
}

.right_no_bottom{
	border-top-width: 1px !important;
	border-right-width: 1px !important;
	border-bottom-width: 0px !important;
}

.table_header_row_left { padding-top: 3px;
    padding-left: 6px;
    padding-right: 1px;
    padding-bottom: 3px;
    border-style: solid;
    border-top-width: 0px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 1px;
    border-bottom-color: #CCCCCC;
    font-weight: bold;
    color: #666666;
    vertical-align: top;
    text-align: left;
}

.table_header_column { padding-top: 3px;
    padding-left: 6px;
    padding-right: 6px;
    padding-bottom: 3px;
    border-style: solid;
    border-top-width: 1px;
    border-left-width: 0px;
    border-right-width: 1px;
    border-bottom-width: 0px;
    border-right-color: #CCCCCC;
    border-top-color: #CCCCCC;
    font-weight: bold;
    color: #666666;
    vertical-align: top;
}

.table_header_column_top { padding-top: 3px;
    padding-left: 6px;
    padding-right: 6px;
    padding-bottom: 3px;
    border-style: solid;
    border-top-width: 0px;
    border-left-width: 0px;
    border-right-width: 1px;
    border-bottom-width: 0px;
    border-right-color: #CCCCCC;
    font-weight: bold;
    color: #666666;
    vertical-align: top;
}

.table_cell_border {
    padding: 2px;
    border-style: solid;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-left-width: 1px;
    border-right-width: 0px;
    border-bottom-color: #CCCCCC;
    border-top-color: #E6E6E6;
    border-left-color: #CCCCCC;
    border-right-color: #CCCCCC;
    vertical-align: top;
}
/* ... */

